--- a/README.rdoc
+++ b/README.rdoc
@@ -1,11 +1,16 @@
 == README
 
-This README would normally document whatever steps are necessary to get the
 application up and running.
 
-Things you may want to cover:
+* Commands to run `bundle install && rake db:migrate && rake db:seed` to add dummy data and start the app.
+* By default Authentication of API is disabled, to test apis use this commands below
+  1. `curl http://localhost:3000/models/serie_100/model_types` to test API 1
+  2. `curl -d "base_price=1000" http://localhost:3000/models/serie_100/model_types_price/bmw_11` to test API 2
 
-* Ruby version
+
+* Ruby version 2.2 or above
+
+* Rails version 4.2.5
 
 * System dependencies
 
