--- a/README.rdoc
+++ b/README.rdoc
@@ -1,33 +1,34 @@
 == README
+#### Ruby version 2.2 or above is needed
 
-application up and running.
+#### Rails version 4.2.5
+
+###application up and running.
 
 * Commands to run `bundle install && rake db:migrate && rake db:seed` to add dummy data and start the app.
 * By default Authentication of API is disabled, to test apis use this commands below
   1. `curl http://localhost:3000/models/serie_100/model_types` to test API 1
   2. `curl -d "base_price=1000" http://localhost:3000/models/serie_100/model_types_price/bmw_11` to test API 2
+* To test with ruby script which is in the project folder, run
+  1. `ruby test_api_with_authentication.rb` - This will test both request1 and request2
 
+#### Configuration
+  * To enable authentication of APIs uncomment the authenticate_user! filters in the controllers
+  * Then run `ruby test_api_with_authentication.rb` to test if authentication is working.
 
-* Ruby version 2.2 or above
-
-* Rails version 4.2.5
-
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
 
 * How to run the test suite
+  1. For test suite to run, authentication should be disabled.
+  2. run `rspec` to run all test cases
 
-* Services (job queues, cache servers, search engines, etc.)
+#### Implementation Details:-
+1. 'devise_token_auth' gem for authentication of API - a token-based authentication strategy is used here along with devise.
+2. Using sqlite3 as database.
+3. Used rails model concerns to add the total price calculation module.
+4. Rspec for testing models and controllers and `factory_girl` for dynamic generation of test data.
+5. Implemented both the APIs with the exact param names in the routes as well.
 
-* Deployment instructions
 
 * ...
 
 
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
